--- a/4.html
+++ b/4.html
@@ -36,55 +36,113 @@
         <button id="groceriesDrinks" class="grocery">Drinks</button>
     </section>
 
-    <div id="groceryMeat">
+    <div class="groceriesContainer" id="groceryMeat">
+            <div class="grContainer">
+                <img class="pictureOfFood" src="" alt="PictureOfFood">
+                <p class="name">Pekinese hotwings</p>
+                <p>Sugar: 15g</p>
+                <p id="calories">Calories: </p>
+            </div>
+            <div class="grContainer">
+                <img class="pictureOfFood" src="" alt="PictureOfFood">
+                <p class="name">Pekinese hotwings</p>
+                <p>Sugar: 15g</p>
+                <p id="calories">Calories: </p>
+            </div>
+
+            <div class="grContainer">
+                <img class="pictureOfFood" src="" alt="PictureOfFood">
+                <p class="name">Pekinese hotwings</p>
+                <p>Sugar: 15g</p>
+                <p id="calories">Calories: </p>
+            </div>
+
+            <div class="grContainer">
+                <img class="pictureOfFood" src="" alt="PictureOfFood">
+                <p class="name">Pekinese hotwings</p>
+                <p>Sugar: 15g</p>
+                <p id="calories">Calories: </p>
+            </div>
+
+            <div class="grContainer">
+                <img class="pictureOfFood" src="" alt="PictureOfFood">
+                <p class="name">Pekinese hotwings</p>
+                <p>Sugar: 15g</p>
+                <p id="calories">Calories: </p>
+            </div>
+    </div>
+
+    <div class="groceriesContainer" id="groceryVegetable">
         <div class="grContainer">
             <img class="pictureOfFood" src="" alt="PictureOfFood">
-            <p class="name">Pekinese hotwings</p>
+            <p class="name">Leafs</p>
             <p>Sugar: 15g</p>
             <p id="calories">Calories: </p>
+        </div>
 
-            <div class="grContainer">
-                <img class="pictureOfFood" src="" alt="PictureOfFood">
-                <p class="name">Pekinese hotwings</p>
-                <p>Sugar: 15g</p>
-                <p id="calories">Calories: </p>
-            </div>
+        <div class="grContainer">
+            <img class="pictureOfFood" src="" alt="PictureOfFood">
+            <p class="name">Leafs</p>
+            <p>Sugar: 15g</p>
+            <p id="calories">Calories: </p>
+        </div>
 
-            <div class="grContainer">
-                <img class="pictureOfFood" src="" alt="PictureOfFood">
-                <p class="name">Pekinese hotwings</p>
-                <p>Sugar: 15g</p>
-                <p id="calories">Calories: </p>
-            </div>
+        <div class="grContainer">
+            <img class="pictureOfFood" src="" alt="PictureOfFood">
+            <p class="name">Leafs</p>
+            <p>Sugar: 15g</p>
+            <p id="calories">Calories: </p>
+        </div>
 
-            <div class="grContainer">
-                <img class="pictureOfFood" src="" alt="PictureOfFood">
-                <p class="name">Pekinese hotwings</p>
-                <p>Sugar: 15g</p>
-                <p id="calories">Calories: </p>
-            </div>
+        <div class="grContainer">
+            <img class="pictureOfFood" src="" alt="PictureOfFood">
+            <p class="name">Leafs</p>
+            <p>Sugar: 15g</p>
+            <p id="calories">Calories: </p>
+        </div>
 
-            <div class="grContainer">
-                <img class="pictureOfFood" src="" alt="PictureOfFood">
-                <p class="name">Pekinese hotwings</p>
-                <p>Sugar: 15g</p>
-                <p id="calories">Calories: </p>
-            </div>
+        <div class="grContainer">
+            <img class="pictureOfFood" src="" alt="PictureOfFood">
+            <p class="name">Leafs</p>
+            <p>Sugar: 15g</p>
+            <p id="calories">Calories: </p>
+        </div>
     </div>
 
-    <div id="groceryVegetable">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+    <div class="groceriesContainer" id="groceryFruit">
+        <div class="grContainer">
+            <img class="pictureOfFood" src="" alt="PictureOfFood">
+            <p class="name">Apple</p>
+            <p>Sugar: 15g</p>
+            <p id="calories">Calories: </p>
+        </div>
 
-    <div id="groceryFruit">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="grContainer">
+            <img class="pictureOfFood" src="" alt="PictureOfFood">
+            <p class="name">Apple</p>
+            <p>Sugar: 15g</p>
+            <p id="calories">Calories: </p>
+        </div>
+
+        <div class="grContainer">
+            <img class="pictureOfFood" src="" alt="PictureOfFood">
+            <p class="name">Apple</p>
+            <p>Sugar: 15g</p>
+            <p id="calories">Calories: </p>
+        </div>
+
+        <div class="grContainer">
+            <img class="pictureOfFood" src="" alt="PictureOfFood">
+            <p class="name">Apple</p>
+            <p>Sugar: 15g</p>
+            <p id="calories">Calories: </p>
+        </div>
+
+        <div class="grContainer">
+            <img class="pictureOfFood" src="" alt="PictureOfFood">
+            <p class="name">Apple</p>
+            <p>Sugar: 15g</p>
+            <p id="calories">Calories: </p>
+        </div>
     </div>
 </body>
