--- a/1.html
+++ b/1.html
@@ -14,10 +14,11 @@
     <nav class="navigation">
         <a href="1.html" class="logo">Logo</a>
         <div id="menu">
-            <a href="2.html">Shopping List</a>
-            <a href="3.html">Recepies</a>
-            <a href="4.html">Forum</a>
+            <a href="createProfile.html">Create Profile</a>
+            <a href="shoppingList.html">Shopping List</a>
+            <a href="forum.html">Forum</a>
             <a href="5.html">PROchat</a>
+            <a href="users.html">Users</a>
             <a href="6.html">something</a>
         </div>
         <a href="javascript:void(0);" class="burger" onclick="reveal()">
@@ -32,7 +33,7 @@
     </section>
 
     <section class="recipeContainerMeat" id="meatMenu">
-        <a href="2.html" class="recipe" onclick="">
+        <a href="recepie.html" class="recipe" onclick="">
             <img class="pictureOfFood" src="" alt="PictureOfFood">
             <p class="name">Pekinese hotwings</p>
             <div>
