--- a/users.html
+++ b/users.html
@@ -14,10 +14,11 @@
     <nav class="navigation">
         <a href="1.html" class="logo">Logo</a>
         <div id="menu">
-            <a href="2.html">Shopping List</a>
-            <a href="3.html">Recepies</a>
-            <a href="4.html">Forum</a>
+            <a href="createProfile.html">Create Profile</a>
+            <a href="shoppingList.html">Shopping List</a>
+            <a href="forum.html">Forum</a>
             <a href="5.html">PROchat</a>
+            <a href="users.html">Users</a>
             <a href="6.html">something</a>
         </div>
         <a href="javascript:void(0);" class="burger" onclick="reveal()">
@@ -25,25 +26,8 @@
         </a>
     </nav>
 
-    <div class="headder">
-        Forum
-    </div>
-    <div id="forumContainer" class='forumContainer' style="display: grid;">
-            <button id="health" class="item" onclick="">
-                <h1>Health</h1>
-                <p>Discuss your health issues with others. Ask for advice!</p>
-            </button>
-            <button id="experience" class="item" onclick="">
-                <h1>Experience</h1>
-                <p></p>
-            </button>
-            <button id="exercise" class="item">
-                <h1>Exercise</h1>
-                <p>Share your workout rutine with others.</p>
-            </button>
-            <button id="recepies" class="item">
-                <h1>Recepies</h1>
-                <p></p>
-            </button>
-    </div>
+    <button onclick="showUsers()">
+        Show users
+    </button>
+    <p id="output"></p>
 </body>
