--- a/1.html
+++ b/1.html
@@ -34,77 +34,77 @@
 
     <section class="recipeContainerMeat" id="meatMenu">
         <a href="recepie.html" class="recipe" onclick="">
-            <img class="pictureOfFood" src="" alt="PictureOfFood">
+            <img class="pictureOfFood" src="assets/images/Chinese recipes/pekinese-hotwings.jpg" alt="PictureOfFood">
             <p class="name">Pekinese hotwings</p>
             <div>
                 <p class="portion"></p>
                 <img class="portionIcon" src="" alt="portions">
             </div>
-            <p>Sugar: 15g</p>
-            <p>Fat: 80g</p>
-            <p id="calories">Calories: </p>
+            <p>Sugar: 8g</p>
+            <p>Fat: 10g</p>
+            <p id="calories">Calories: 285kcal</p>
         </a>
 
         <div class="recipe">
-            <img class="pictureOfFood" src="" alt="PictureOfFood">
-            <p class="name">Cantonese noodles</p>
+            <img class="pictureOfFood" src="assets/images/Chinese recipes/chicken-on-ricenoodles.jpg" alt="PictureOfFood">
+            <p class="name">Chicken on rice noodles</p>
             <div>
                 <p class="portion"></p>
                 <img class="portionIcon" src="" alt="portions">
             </div>
-            <p class="move">Sugar: 10g</p>
-            <p>Fat: 70g</p>
-            <p id="calories">Calories: </p>
+            <p class="move">Sugar: 7g</p>
+            <p>Fat: 5g</p>
+            <p id="calories">Calories: 200kcal</p>
         </div>
 
         <div class="recipe">
-            <img class="pictureOfFood" src="" alt="PictureOfFood">
-            <p class="name">Pekinese soup</p>
+            <img class="pictureOfFood" src="assets/images/Chinese recipes/chicken-basil.jpg" alt="PictureOfFood">
+            <p class="name">Chicken basil</p>
             <div>
                 <p class="portion"></p>
                 <img class="portionIcon" src="" alt="portions">
             </div>
-            <p>Sugar: 20g</p>
-            <p>Fat: 100g</p>
-            <p id="calories">Calories: </p>
+            <p>Sugar: 2g</p>
+            <p>Fat: 7g</p>
+            <p id="calories">Calories: 160kcal</p>
         </div>
     </section>
 
     <section class="recipeContainerVegetarian" id="vegetarianMenu">
         <div class="recipe">
-            <img class="pictureOfFood" src="" alt="PictureOfFood">
-            <p class="name">Pekinese hotwings</p>
+            <img class="pictureOfFood" src="assets/images/Chinese recipes/dish-of-plain-rice.jpg" alt="PictureOfFood">
+            <p class="name">Plain rice</p>
             <div>
                 <p class="portion"></p>
                 <img class="portionIcon" src="" alt="portions">
             </div>
-            <p>Sugar: 15g</p>
-            <p>Fat: 80g</p>
-            <p id="calories">Calories: </p>
+            <p>Sugar: 12g</p>
+            <p>Fat: 1g</p>
+            <p id="calories">Calories: 170kcal</p>
         </div>
 
         <div class="recipe">
-            <img class="pictureOfFood" src="" alt="PictureOfFood">
-            <p class="name">Cantonese noodles</p>
+            <img class="pictureOfFood" src="assets/images/Chinese recipes/sushi-series.jpg" alt="PictureOfFood">
+            <p class="name">Acocado sushi</p>
             <div>
                 <p class="portion"></p>
                 <img class="portionIcon" src="" alt="portions">
             </div>
-            <p class="move">Sugar: 10g</p>
-            <p>Fat: 70g</p>
-            <p id="calories">Calories: </p>
+            <p class="move">Sugar: 9g</p>
+            <p>Fat: 6g</p>
+            <p id="calories">Calories: 120kcal</p>
         </div>
 
         <div class="recipe">
-            <img class="pictureOfFood" src="" alt="PictureOfFood">
-            <p class="name">Pekinese soup</p>
+            <img class="pictureOfFood" src="assets/images/Chinese recipes/tofu-with-kimchi.jpg" alt="PictureOfFood">
+            <p class="name">Tofu with Kimchi</p>
             <div>
                 <p class="portion"></p>
                 <img class="portionIcon" src="" alt="portions">
             </div>
-            <p>Sugar: 20g</p>
-            <p>Fat: 100g</p>
-            <p id="calories">Calories: </p>
+            <p>Sugar: 4g</p>
+            <p>Fat: 1g</p>
+            <p id="calories">Calories: 80kcal</p>
         </div>
     </section>
 
