--- a/forum.html
+++ b/forum.html
@@ -28,9 +28,9 @@
         </a>
     </nav>
 
-    <div class="headder">
+    <h1 class="headder">
         Forum
-    </div>
+    </h1>
     <div id="forumContainer" class='forumContainer' style="display: grid;">
             <button id="health" class="item" onclick="">
                 <h1>Health</h1>
