--- a/recipe.html
+++ b/recipe.html
@@ -28,20 +28,20 @@
         </a>
     </nav>
 
-    <div class="recipeName">
+    <h1 class="recipeName">
         Pekinese hotwings
-    </div>
+    </h1>
     <div class="slider">
         <div id="ingredients" onclick="ingredients()">Ingredients</div>
         <div id="directions" onclick="directions()">Directions</div>
         <div id="tips" onclick="tips()">Tips</div>
     </div>
     <div class="ingredients" id="ing">
-        <div>
+        <h2>
             Ingredients
-        </div>
+        </h2>
         <div>
-            <ul>
+            <ul class="ul">
                 <li>
                     ½ cup all-purpose flour
                 </li>
@@ -77,25 +77,27 @@
     </div>
 
     <div class="directions" id="dir">
-        <div>
+        <h2>
             Directions
-        </div>
+        </h2>
         <div>
-            <ol>
+            <ol class="ol">
                 <li>
                     In a small bowl mix together the flour, paprika, cayenne pepper and salt. Place chicken wings in a
                     large nonporous glass dish or bowl and sprinkle flour mixture over them until they are evenly
                     coated. Cover dish or bowl and refrigerate for 60 to 90 minutes.
                 </li>
+                <br>
                 <li>
                     Heat oil in a deep fryer to 375 degrees F (190 degrees C). The oil should be just enough to cover
                     wings entirely, an inch or so deep. Combine the butter, hot sauce, pepper and garlic powder in a
                     small saucepan over low heat. Stir together and heat until butter is melted and mixture is well
                     blended. Remove from heat and reserve for serving.
                 </li>
+                <br>
                 <li>
                     Fry coated wings in hot oil for 10 to 15 minutes, or until parts of wings begin to turn brown.
-                    Remove from heat, place wings in serving bowl, add hot sauce mixture and stir together. Serve.
+                    Remove from heat, place wings in serving bowl, add hot sauce mixture and stir together.
                 </li>
             </ol>
         </div>
@@ -105,5 +107,5 @@
 
     </div>
 
-    <button><a href="1.html">Back</a></button>
+    <button class="backb"><a href="recipes.html">Back</a></button>
 </body>
