--- a/recipes.html
+++ b/recipes.html
@@ -35,13 +35,10 @@
     </section>
 
     <section class="recipeContainerMeat" id="meatMenu">
-        <a href="recepie.html" class="recipe" onclick="">
+        <a href="recipe.html" class="recipe" onclick="">
             <img class="pictureOfFood" src="assets/images/Chinese recipes/pekinese-hotwings.jpg" alt="PictureOfFood">
             <p class="name">Pekinese hotwings</p>
-            <div>
-                <p class="portion"></p>
-                <img class="portionIcon" src="" alt="portions">
-            </div>
+
             <p>Sugar: 8g</p>
             <p>Fat: 10g</p>
             <p id="calories">Calories: 285kcal</p>
@@ -50,10 +47,7 @@
         <div class="recipe">
             <img class="pictureOfFood" src="assets/images/Chinese recipes/chicken-on-ricenoodles.jpg" alt="PictureOfFood">
             <p class="name">Chicken on rice noodles</p>
-            <div>
-                <p class="portion"></p>
-                <img class="portionIcon" src="" alt="portions">
-            </div>
+
             <p class="move">Sugar: 7g</p>
             <p>Fat: 5g</p>
             <p id="calories">Calories: 200kcal</p>
@@ -62,10 +56,7 @@
         <div class="recipe">
             <img class="pictureOfFood" src="assets/images/Chinese recipes/chicken-basil.jpg" alt="PictureOfFood">
             <p class="name">Chicken basil</p>
-            <div>
-                <p class="portion"></p>
-                <img class="portionIcon" src="" alt="portions">
-            </div>
+
             <p>Sugar: 2g</p>
             <p>Fat: 7g</p>
             <p id="calories">Calories: 160kcal</p>
@@ -76,10 +67,7 @@
         <div class="recipe">
             <img class="pictureOfFood" src="assets/images/Chinese recipes/dish-of-plain-rice.jpg" alt="PictureOfFood">
             <p class="name">Plain rice</p>
-            <div>
-                <p class="portion"></p>
-                <img class="portionIcon" src="" alt="portions">
-            </div>
+
             <p>Sugar: 12g</p>
             <p>Fat: 1g</p>
             <p id="calories">Calories: 170kcal</p>
@@ -88,10 +76,7 @@
         <div class="recipe">
             <img class="pictureOfFood" src="assets/images/Chinese recipes/sushi-series.jpg" alt="PictureOfFood">
             <p class="name">Acocado sushi</p>
-            <div>
-                <p class="portion"></p>
-                <img class="portionIcon" src="" alt="portions">
-            </div>
+
             <p class="move">Sugar: 9g</p>
             <p>Fat: 6g</p>
             <p id="calories">Calories: 120kcal</p>
@@ -100,10 +85,7 @@
         <div class="recipe">
             <img class="pictureOfFood" src="assets/images/Chinese recipes/tofu-with-kimchi.jpg" alt="PictureOfFood">
             <p class="name">Tofu with Kimchi</p>
-            <div>
-                <p class="portion"></p>
-                <img class="portionIcon" src="" alt="portions">
-            </div>
+
             <p>Sugar: 4g</p>
             <p>Fat: 1g</p>
             <p id="calories">Calories: 80kcal</p>
