--- a/users.html
+++ b/users.html
@@ -27,7 +27,9 @@
             <i class="fa fa-bars"></i>
         </a>
     </nav>
-
+    <h1>
+        Users
+    </h1>
     <button onclick="showUsers()">
         Show users
     </button>
