--- a/forum.html
+++ b/forum.html
@@ -22,6 +22,7 @@
             <a href="forum.html">Forum</a>
             <a href="proChat.html">PROchat</a>
             <a href="users.html">Users</a>
+            <a href="info.html">Info</a>
         </div>
         <a href="javascript:void(0);" class="burger" onclick="reveal()">
             <i class="fa fa-bars"></i>
@@ -31,8 +32,11 @@
     <h1 class="headder">
         Forum
     </h1>
+
+    <img class="forumHid" id='forum' src="assets/pictures/SS/forum1.jpg" alt="forum" >
+
     <div id="forumContainer" class='forumContainer' style="display: grid;">
-            <button id="health" class="item" onclick="">
+            <button id="health" class="item" onclick="showIMG()">
                 <h1>Health</h1>
                 <p>Discuss your health issues with others. Ask for advice!</p>
             </button>
