--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a class="align" href="forum.html">Forum</a>
         <a class="align" href="proChat.html">PROchat</a>
         <a class="align" href="users.html">Users</a>
+        <a class="align" href="info.html">Info</a>
     </div>
 
 </body>
