--- a/shoppingList.html
+++ b/shoppingList.html
@@ -22,6 +22,7 @@
             <a href="forum.html">Forum</a>
             <a href="proChat.html">PROchat</a>
             <a href="users.html">Users</a>
+            <a href="info.html">Info</a>
         </div>
         <a href="javascript:void(0);" class="burger" onclick="reveal()">
             <i class="fa fa-bars"></i>
