--- a/shoppingList.html
+++ b/shoppingList.html
@@ -33,11 +33,13 @@
         Shopping List
     </h1>
 
+    <img class="forumHid" id="forum" src="assets/pictures/SS/shoppingList.jpg" style="width: 100%;" alt="">
+
     <section id="groceries" class="groceries" style="display: grid;">
         <button id="groceriesMeat" class="grocery" onclick="meatGroceries()">Meat</button>
         <button id="groceriesVegetable" class="grocery" onclick='vegetableGroceries()'>Vegetable</button>
         <button id="groceriesFruit" class="grocery" onclick="friutGroceries()">Fruit</button>
-        <button id="groceriesDrinks" class="grocery">Drinks</button>
+        <button id="groceriesDrinks" class="grocery" onclick="showIMG()">Drinks</button>
     </section>
 
     <div class="groceriesContainer" id="groceryMeat">
