--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         <a class="align" href="proChat.html">PROchat</a>
         <a class="align" href="users.html">Users</a>
         <a class="align" href="info.html">Info</a>
-    </div>
+    </div>z
 
 </body>
